ingress/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - ansari.com
    secretName: aneesh-com
  rules:
  - host: ansari.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mydep
            port:
              number: 80
